--- a/internal/frontend/components/entry.templ
+++ b/internal/frontend/components/entry.templ
@@ -8,10 +8,10 @@ import (
 )
 
 templ PasteEntry(paste paste.Paste) {
-	<a href={ templ.SafeURL("/" + paste.Reference) } class="block p-4 border-main bg-muted rounded-lg border hover:bg-accent transition-colors">
+	<a href={ templ.SafeURL("/" + paste.Reference) } class="block p-4 border-main bg-muted rounded-lg border hover:shadow-xl hover:text-accent transition-all duration-200">
 		<div class="flex flex-col lg:flex-row lg:items-center lg:justify-between">
 			<div class="flex flex-col">
-				<h3 class="text-lg font-medium text-main">
+				<h3 class="text-lg font-medium">
 					{{
 						title := "untitled"
 						if paste.Title != "" {
@@ -36,7 +36,7 @@ templ PasteEntry(paste paste.Paste) {
 				</span>
 				<div class="flex flex-wrap gap-1">
 					for _, tag := range paste.Tags {
-						<span class="bg-main text-muted px-2 py-0.5 rounded text-sm">{ tag }</span>
+						<span class="bg-main text-muted px-2 py-0.5 rounded text-sm border border-main">{ tag }</span>
 					}
 				</div>
 			</div>
