--- a/internal/frontend/layouts/base.templ
+++ b/internal/frontend/layouts/base.templ
@@ -20,15 +20,6 @@ templ Base(content templ.Component) {
 			<script src="https://cdn.tailwindcss.com"></script>
 			<script src="/static/htmx.js"></script>
 			<link rel="stylesheet" href="/static/style.css"/>
-			<style>
-				.toggle-checkbox:checked {
-					right: 0;
-					border-color: var(--bg-accent);
-				}
-				.toggle-checkbox:checked + .toggle-label {
-					background-color: var(--bg-accent);
-				}
-			</style>
 		</head>
 		<body class="h-full flex flex-col">
 			@components.CommandPalette()
@@ -38,7 +29,7 @@ templ Base(content templ.Component) {
 					components.Link{Icon: icons.Clock(16, 16, "text-muted"), Text: "recent", URL: templ.SafeURL("/archive")},
 					components.Link{Icon: icons.Cog(16, 16, "text-muted"), Text: "settings", URL: templ.SafeURL("/settings")},
 				)
-				<div class="relative h-full w-full">
+				<div class="relative h-full w-full relative">
 					@content
 				</div>
 			</div>
