feat(frontend): add toast notification for copying to clipboard

--- a/internal/frontend/layouts/base.templ
+++ b/internal/frontend/layouts/base.templ
@@ -23,6 +23,7 @@ templ Base(content templ.Component) {
 		</head>
 		<body class="h-full flex flex-col">
 			@components.CommandPalette()
+			@components.Toast()
 			<div class="flex flex-col h-full w-full">
 				@components.Nav(
 					"skladka",
