--- a/internal/frontend/components/editor.templ
+++ b/internal/frontend/components/editor.templ
@@ -1794,6 +1794,13 @@ templ Editor(content, syntax string, readonly bool) {
                                 return editor.updateOptions({ readOnly: true})
                             },
                             copyToClipboard: function() {
+                                window.Toaster.show(
+                                    'content copied to clipboard!', {
+                                        type: 'success',
+                                        duration: 3000
+                                    }
+                                )
+
                                 return navigator.clipboard.writeText(editor.getValue())
                             },
                             downloadAsFile: function() {
